syntax = "proto3";

package auth;

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  bool isValid = 1;
  AuthUser user = 2;
}

message AuthUser {
  string id = 1;
  string email = 2;
}